# sre

./: .gitignore  LICENSE  README.md  sre.cabal  stack.yaml
app/: Main.hs
ext/: data_source.json  rules.txt
src/: DataSource.hs  Lib.hs  RuleParser.hs
