name:                sre
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/goromlagche/sre#readme
license:             BSD3
license-file:        LICENSE
author:              Mrinmoy Das
maintainer:          mrinmoy.das91@gmail.com
copyright:           Mrinmoy Das
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , DataSource
                     , RuleParser
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
                     , aeson
                     , bytestring
                     , attoparsec
  default-language:    Haskell2010

executable sre
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sre
                     , text
                     , bytestring
  default-language:    Haskell2010

test-suite sre-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sre
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/goromlagche/sre
